# aws-eks

./: .gitignore  .mcp.json  .pre-commit-config.yaml  ALB-CONTROLLER-SETUP.md  ALB-SETUP.md  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
.claude/commands/: update-docs.md
cdk/: .env.example  .gitignore  README.md  cdk.json  eks.py  requirements.txt
gitops/: README.md
gitops/apps/argocd/: self-management.yaml
gitops/apps/aws-load-balancer-controller/: application.yaml  patch-values.sh
gitops/apps/demo-apps/: alb-ingress-example.yaml  application.yaml
gitops/bootstrap/base/: argocd-helm-chart.yaml  install-argocd.sh
gitops/bootstrap/overlays/staging/: argocd-values-patch.yaml  kustomization.yaml
pulumi/: .env.example  .gitignore  Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  __init__.py  __main__.py  alb.py  config.py  constants.py  eks.py  iam.py  pyproject.toml  requirements.txt  type_defs.py  vpc.py
terraform/: .terraform.lock.hcl  Taskfile.yml  access-entries-example.tfvars  alb.tf  backend.tf  eks.tf  outputs.tf  production.tfvars  staging.tfvars  standalone-access-entry-example.tf  variables.tf
terraform-backend/: README.md  s3-backend.tf
